# routes/experience.js
@@ -2,6 +2,6 @@ const express = require('express');
 const router = express.Router();
 const experienceController = require("../controllers/experience");
 
-router.route('/:id').get(experienceController.read).put(experienceController.update).delete(experienceController.delete);
-router.route('/').post(experienceController.create);
+router.route('/:id',  /*  #swagger.tags = ['Experience'] */).get(experienceController.read).put(experienceController.update).delete(experienceController.delete);
+router.route('/',  /*  #swagger.tags = ['Experience'] */).post(experienceController.create);
 module.exports = router;
