# routes/index.js
@@ -8,13 +8,13 @@ const homeRoute = require('../routes/home');
 const projRoute = require('../routes/projects');
 const resRoute = require('../routes/resume');
 const toolsRoute = require('../routes/tools');
-const home = `${env.state.configurations.HOMEPAGE}`;
-const experience = `${env.state.configurations.EXPERIENCE}`;
-const education = `${env.state.configurations.EDUCATION}`;
-const project = `${env.state.configurations.PROJECTS}`;
+// const home = `${env.state.configurations.HOMEPAGE}`;
+// const experience = `${env.state.configurations.EXPERIENCE}`;
+// const education = `${env.state.configurations.EDUCATION}`;
+// const project = `${env.state.configurations.PROJECTS}`;
 const documentation = `${env.state.configurations.DOCUMENTATION}`;
-const resume = `${env.state.configurations.RESUME}`;
-const tools = `${env.state.configurations.TOOLS_AND_ETHICS}`;
+// const resume = `${env.state.configurations.RESUME}`;
+// const tools = `${env.state.configurations.TOOLS_AND_ETHICS}`;
 const { auth } = require('express-openid-connect');
 const config = require('../middlewares/authentication');
 const userRoute = require("../routes/user");
@@ -31,13 +31,13 @@ router.use(bodyParser.urlencoded({extended:true}), bodyParser.json());
 router.use(cors());
 
 router.use(auth(config));
-router.use(user, userRoute);
-router.use(home, homeRoute );
-router.use(education, eduRoute );
-router.use(experience, expRoute );
-router.use(project, projRoute );
-router.use(resume, resRoute );
-router.use(tools, toolsRoute);
+router.use('/user', userRoute);
+router.use('/', homeRoute );
+router.use('/education', eduRoute );
+router.use('/experience', expRoute );
+router.use('/projects', projRoute );
+router.use('/resume_cv', resRoute );
+router.use('/tools_and_ethics', toolsRoute);
 
 router.use(documentation, swaggerUI.serve, swaggerUI.setup(swaggerJson));
 
